--- a/templates/admin/activity-logs.html
+++ b/templates/admin/activity-logs.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Admin Styles -->
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="../../admin/css/admin.css">
 
     <style>
         /* Activity Logs Specific Styles */
@@ -586,7 +586,7 @@
     </div>
 
     <!-- Admin JavaScript -->
-    <script src="js/admin.js"></script>
+    <script src="../../admin/js/admin.js"></script>
     <script>
         // Check authentication and load logs
         document.addEventListener('DOMContentLoaded', function () {
