--- a/templates/auth.html
+++ b/templates/auth.html
@@ -808,7 +808,7 @@
     </div>
 
     <!-- Supabase Client -->
-    <script src="js/supabase-client.js"></script>
+    <script src="../js/supabase-client.js"></script>
 
     <script>
         // Tab switching
