--- a/templates/booking-confirmation.html
+++ b/templates/booking-confirmation.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/hotel-booking.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/hotel-booking.css">
     <style>
         .confirmation-main {
             padding: 6rem 0 4rem;
@@ -241,7 +241,7 @@
             <div class="container">
                 <div class="nav-content">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.jpg" alt="Coast to Coast Journeys">
+                        <img src="../assets/images/logo.jpg" alt="Coast to Coast Journeys">
                         <span class="brand-name">Coast to Coast Journeys</span>
                     </a>
 
@@ -337,7 +337,7 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/hotel-api.js"></script>
+    <script src="../js/hotel-api.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const bookingData = SearchSession.getBookingData();
