--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <!-- Admin Styles -->
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="../../admin/css/admin.css">
 </head>
 
 <body>
@@ -335,7 +335,7 @@
     </div>
 
     <!-- Admin JavaScript -->
-    <script src="js/admin.js"></script>
+    <script src="../../admin/js/admin.js"></script>
     <script>
         // Initialize Dashboard
         document.addEventListener('DOMContentLoaded', function () {
