--- a/templates/admin/suppliers.html
+++ b/templates/admin/suppliers.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Admin Styles -->
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="../../admin/css/admin.css">
 </head>
 
 <body>
@@ -135,7 +135,7 @@
         </main>
     </div>
 
-    <script src="js/admin.js"></script>
+    <script src="../../admin/js/admin.js"></script>
 </body>
 
 </html>
