--- a/templates/flight-results.html
+++ b/templates/flight-results.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/hotel-booking.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/hotel-booking.css">
 
     <style>
         /* Flight Results Page Specific Styles - Trip.com Inspired */
@@ -496,7 +496,7 @@
     <header class="simple-header">
         <div class="header-content">
             <a href="index.html" class="logo-link">
-                <img src="assets/images/logo.jpg" alt="Logo">
+                <img src="../assets/images/logo.jpg" alt="Logo">
                 <span>Coast to Coast Journeys</span>
             </a>
             <nav class="nav-links">
