--- a/templates/hotel-details.html
+++ b/templates/hotel-details.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/hotel-booking.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/hotel-booking.css">
 </head>
 
 <body class="hotel-details-page">
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="nav-content">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo.jpg" alt="Coast to Coast Journeys">
+                        <img src="../assets/images/logo.jpg" alt="Coast to Coast Journeys">
                         <span class="brand-name">Coast to Coast Journeys</span>
                     </a>
 
@@ -193,8 +193,8 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/hotel-api.js"></script>
-    <script src="js/hotel-details.js"></script>
+    <script src="../js/hotel-api.js"></script>
+    <script src="../js/hotel-details.js"></script>
 </body>
 
 </html>
