--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard | Coast to Coast Journeys</title>
+    <title>Admin Dashboard | C2C Journeys</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
