--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login | Coast to Coast Journeys</title>
+    <title>Admin Login | C2C Journeys</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -414,7 +414,7 @@
                     <i class="fas fa-plane"></i>
                 </div>
                 <h1 class="login-title">Admin Portal</h1>
-                <p class="login-subtitle">Coast to Coast Journeys</p>
+                <p class="login-subtitle">C2C Journeys</p>
             </div>
 
             <form class="login-form" id="loginForm" onsubmit="handleLogin(event)">
