--- a/templates/hotel-results.html
+++ b/templates/hotel-results.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Search results for hotels - Coast to Coast Journeys">
+    <meta name="description" content="Search results for hotels - C2C Journeys">
     <title>Hotel Search Results | Coast To Coast Journeys</title>
 
     <!-- Google Fonts -->
@@ -29,8 +29,8 @@
             <div class="container">
                 <div class="nav-content">
                     <a href="index.html" class="logo">
-                        <img src="../assets/images/logo.jpg" alt="Coast to Coast Journeys">
-                        <span class="brand-name">Coast to Coast Journeys</span>
+                        <img src="../assets/images/c2c-logo.png" alt="C2C Journeys">
+                        <span class="brand-name">C2C Journeys</span>
                     </a>
 
                     <ul class="nav-menu" id="navMenu">
@@ -289,7 +289,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-bottom">
-                <p>&copy; 2026 Coast to Coast Journeys. All rights reserved.</p>
+                <p>&copy; 2026 C2C Journeys. All rights reserved.</p>
             </div>
         </div>
     </footer>
