--- a/templates/admin/refunds.html
+++ b/templates/admin/refunds.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Refunds | Coast to Coast Journeys Admin</title>
+    <title>Refunds | C2C Journeys Admin</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
