--- a/templates/auth.html
+++ b/templates/auth.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In | Coast to Coast Journeys</title>
+    <title>Sign In | C2C Journeys</title>
     <meta name="description"
-        content="Sign in to your Coast to Coast Journeys account to manage your bookings, or sign up for a new account.">
+        content="Sign in to your C2C Journeys account to manage your bookings, or sign up for a new account.">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
