--- a/templates/index.html
+++ b/templates/index.html
@@ -552,18 +552,23 @@
                 <div class="social-links">
                     <a href="https://www.facebook.com/people/Coast-to-Coast-Journeys/61574464089885/" target="_blank"
                         class="social-link" title="Facebook">
-                        <i class="fab fa-facebook-f"></i>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/2021_Facebook_icon.svg"
+                            alt="Facebook" style="width: 24px; height: 24px;">
                     </a>
                     <a href="https://www.instagram.com/coasttocoastjourneys/" target="_blank" class="social-link"
                         title="Instagram">
-                        <i class="fab fa-instagram"></i>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg"
+                            alt="Instagram" style="width: 24px; height: 24px;">
                     </a>
                     <a href="https://www.linkedin.com/company/coast-to-coast-journeys/" target="_blank"
                         class="social-link" title="LinkedIn">
-                        <i class="fab fa-linkedin-in"></i>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg" alt="LinkedIn"
+                            style="width: 24px; height: 24px;">
                     </a>
-                    <a href="https://g.page/coasttocoastjourneys" target="_blank" class="social-link" title="Google">
-                        <i class="fab fa-google"></i>
+
+                    <a href="https://wa.me/918237216173" target="_blank" class="social-link" title="WhatsApp">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
+                            style="width: 24px; height: 24px;">
                     </a>
                 </div>
             </div>
@@ -632,11 +637,6 @@
                     <!-- Google -->
                     <div class="partner-logo">
                         <img src="https://www.flightsmojo.in/images/Google_Icon.svg" alt="Google"
-                            style="height: 40px; width: auto; background: white; padding: 5px; border-radius: 4px;">
-                    </div>
-                    <!-- WhatsApp -->
-                    <div class="partner-logo">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"
                             style="height: 40px; width: auto; background: white; padding: 5px; border-radius: 4px;">
                     </div>
                     <!-- Visa -->
